<resources>
    <!-- App -->
    <string name="app_name">Massder</string>


    <!-- Menu/Tab -->
    <string name="tab_main">หน้าหลัก</string>
    <string name="tab_message">ข้อความ</string>
    <string name="tab_profile">โปรไฟล์</string>
    <string name="tab_liked">ถูกใจ</string>


    <!-- Section - Main -->
    <string name="main_label_recommend_for_you">แนะนำสำหรับคุณ</string>
    <string name="main_label_your_best_massage">เลือกแผนการนวดที่เหมาะสมกับคุณ</string>
    <string name="main_label_where_we_go">สถานที่ที่เราไป</string>
    <string name="main_label_reserve">ยกเลิกฟรี</string>
    <string name="main_label_operate_area">บริเวณทำการ</string>
    <string name="main_label_experience">ประสบการณ์</string>
    <string name="main_label_cure_methodology">แผนการรักษา</string>
    <string name="main_label_bio">ประวัติหมอนวด</string>
    <string name="main_label_per_person">ประวัติหมอนวด</string>

    <!-- Section - Liked -->
    <string name="liked_label_your_favorite">คุณมีจำนวนหมอนวดที่ถูกใจจำนวน %d คน</string>

    <!-- Section - Profile -->
    <string name="profile๘">โปรไฟล์</string>

    <!-- Common (Generally Usage) -->
    <string name="common_close">ปิด</string>
    <string name="common_okay">ตกลง</string>
    <string name="common_cancel">ยกเลิก</string>
    <string name="common_confirm">ยืนยัน</string>
    <string name="common_chat">แชท</string>
    <string name="common_notify">แจ้งเตือน</string>
    <string name="common_reserve">จอง</string>
    <string name="common_review">รีวิว</string>
    <string name="common_free_cancel">ยกเลิกฟรี</string>
    <string name="common_per_person">ต่อคน</string>

    <!-- Date and Time  -->
    <string name="date_yesterday">เมื่อวาน</string>
    <string name="date_tomorrow">พรุ่งนี้</string>
    <string name="date_last_week">สัปดาห์ก่อน</string>
</resources>
