<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="16dp"
              android:weightSum="1">
    <TextView android:id="@+id/tv_tab_main" android:layout_width="0dp" android:layout_height="wrap_content"
              android:layout_weight="0.25"
              android:textAlignment="center"
              android:textSize="@dimen/text_size_small"
              android:text="@string/tab_main"/>
    <TextView android:id="@+id/tv_tab_liked" android:layout_width="0dp"
              android:layout_height="wrap_content" android:layout_weight="0.25"
              android:textAlignment="center"
              android:textSize="@dimen/text_size_small"
              android:text="@string/tab_liked"/>
    <TextView android:id="@+id/tv_tab_message" android:layout_width="0dp" android:layout_height="wrap_content"
              android:layout_weight="0.25"
              android:textAlignment="center"
              android:textSize="@dimen/text_size_small"
              android:text="@string/tab_message"/>
    <TextView android:id="@+id/tv_tab_profile" android:layout_width="0dp"
              android:layout_height="wrap_content" android:layout_weight="0.25"
              android:textAlignment="center"
              android:textSize="@dimen/text_size_small"
              android:text="@string/tab_profile"/>
</LinearLayout>