<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/main_label_recommend_for_you"
                  style="@style/TopicText" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                  app:layout_constraintTop_toTopOf="parent" android:id="@+id/tv_recommend_for_you"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_recommend_for_you"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginStart="16dp"
                                                   android:layout_marginTop="8dp"
                                                   app:layout_constraintTop_toBottomOf="@+id/tv_recommend_for_you"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="8dp"/>

        <TextView android:id="@+id/tv_where_we_go"
                  android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/main_label_where_we_go"
                  style="@style/TopicText" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                  app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/rv_recommend_for_you"/>

        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_where_we_go"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="8dp"
                                                   app:layout_constraintHorizontal_bias="0.0"
                                                   android:layout_marginTop="8dp"
                                                   app:layout_constraintTop_toBottomOf="@+id/tv_where_we_go"/>

        <TextView android:id="@+id/tv_your_best_massage"
                  android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/main_label_your_best_massage"
                  style="@style/TopicText" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                  app:layout_constraintHorizontal_bias="0.0"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/rv_where_we_go"/>

        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_your_best_massage"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="8dp"
                                                   app:layout_constraintHorizontal_bias="0.0"
                                                   app:layout_constraintTop_toBottomOf="@+id/tv_your_best_massage"
                                                   android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>